--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
                         </a>
                         <div class="w3 w3-padding-10" style="background-color:rgb(255, 204, 0)">
                             <div id="demoAcc" class="w3-bar-block w3-hide w3-padding-large w3-medium">
-                                <a href="#" class="w3-bar-item w3-button " style="background-color:rgb(255, 204, 0)"><i class="fa fa-caret-right w3-margin-right"></i></a>
                                 <meta name="viewport" content="width=device-width, initial-scale=1">
 
                                 <body>
@@ -199,7 +198,7 @@
                             </a>
                             <div class="w3 w3-padding-10" style="background-color:rgb(255, 204, 0)">
                                 <div id="demoAcc2" class="w3-bar-block w3-hide w3-padding-large w3-medium">
-                                    <a href="#" class="w3-bar-item w3-button " style="background-color:rgb(255, 204, 0)"><i class="fa fa-caret-right w3-margin-right"></i></a>
+                                    <a href="#" style="background-color:rgb(255, 204, 0)"><i class=" w3-margin-right"></i></a>
                                     <div class="w3-container">
                                         <button onclick="document.getElementById('id06').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">CAC Keyboards</br>Gaming</br>Keyboards </button>
 
