--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                                                     <div class="w3-container w3-padding-34 w3-light-grey w3-text-black">
                                                         <span onclick="document.getElementById('id06').style.display='none'" class="w3-button w3-display-topright w3-blue">&times;</span>
                                                         <h4><b>CAC Keyboards:</b></h4>
-                                                        <img src="Images/Dell.jpg" /><p>Dell CAC keyboards: Price: $30.00</p>
-														<img src="Images/CAC card.jpg"/><p>CAC Card: Price: $20.00</p>
+                                                        <img src="Images/dell.jpg" /><p>Dell CAC keyboards: Price: $30.00</p>
+							<img src="Images/CAC card.jpg"/><p>CAC Card: Price: $20.00</p>
                                                         <h4><b>Gaming Keyboards:</b></h4>
                                                         <img src="Images/Cooler Master Devastator II.jpg" /><p>Cooler Master Devastator II: Price $30.99</p>
                                                         <img src="Images/Logitech diNovo Edge.jpg" /><p>Logitech diNovo Edge: Price $1050.99</p>
