--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <button onclick="document.getElementById('id21').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">Monitors</button>
 
                     <div id="id21" class="w3-modal">
-                        <div class="w3-modal-content">
+                        <div class="w3-modal-content"> <!-- the monitor modal  -->
                             <div class="w3-container w3-black">
                                 <span onclick="document.getElementById('id21').style.display='none'" class="w3-button w3-display-topright w3-blue">&times;</span>
                                 <header>
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w3-container">
+                    <div class="w3-container"> <!-- the Power supply modal  -->
                         <button onclick="document.getElementById('id22').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">Power Supply</button>
                         <div class="w3-container w3-padding-34 w3-light-grey w3-text-black">
                             <div id="id22" class="w3-modal">
@@ -93,7 +93,7 @@
                                 <meta name="viewport" content="width=device-width, initial-scale=1">
 
                                 <body>
-                                    <div class="w3-container">
+                                    <div class="w3-container"> <!-- the CPU modal  -->
                                         <button onclick="document.getElementById('id01').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">CPU</button>
                                         <div id="id01" class="w3-modal">
                                             <div class="w3-modal-content">
@@ -116,7 +116,7 @@
                                         <button onclick="document.getElementById('id51').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">CPU Cooler</button>
 
                                         <div id="id51" class="w3-modal">
-                                            <div class="w3-modal-content">
+                                            <div class="w3-modal-content"> <!-- the CPU cooler modal  -->
                                                 <div class="w3-container w3-black">
                                                     <header>
                                                         <div class="w3-container w3-padding-34" style="background-color:rgb(255, 204, 0)">
@@ -136,7 +136,7 @@
                                         <button onclick="document.getElementById('id02').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">Motherboards</button>
 
                                         <div id="id02" class="w3-modal">
-                                            <div class="w3-modal-content">
+                                            <div class="w3-modal-content"> <!-- the motherboard modal  -->
                                                 <div class="w3-container w3-black">
                                                     <header>
                                                         <div class="w3-container w3-padding-34" style="background-color:rgb(255, 204, 0)">
@@ -156,7 +156,7 @@
                                         <button onclick="document.getElementById('id03').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">External</br> Hard Drive</button>
 
                                         <div id="id03" class="w3-modal">
-                                            <div class="w3-modal-content">
+                                            <div class="w3-modal-content"> <!-- the external hard drive modal  -->
                                                 <div class="w3-container w3-black">
                                                     <header>
                                                         <div class="w3-container w3-padding-34" style="background-color:rgb(255, 204, 0)">
@@ -176,7 +176,7 @@
                                         <button onclick="document.getElementById('id04').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">Hard Drives</button>
 
                                         <div id="id04" class="w3-modal">
-                                            <div class="w3-modal-content">
+                                            <div class="w3-modal-content"> <!-- the hard drive modal  -->
                                                 <div class="w3-container w3-black">
                                                     <header>
                                                         <div class="w3-container w3-padding-34" style="background-color:rgb(255, 204, 0)">
@@ -194,14 +194,14 @@
                                     </div>
                             </div>
                             <a onclick="myAccFunc2()" href="javascript:void(0)" class="w3-button w3-block w3-left-align" style="background-color:rgb(255, 204, 0)" id="myBtn">
-                                Keyboards<br />& Mouse<i class="fa fa-caret-down"></i>
+                                Keyboards<br />& Mouse<i class="fa fa-caret-down"></i> <!-- the down caret menu option  -->
                             </a>
                             <div class="w3 w3-padding-10" style="background-color:rgb(255, 204, 0)">
                                 <div id="demoAcc2" class="w3-bar-block w3-hide w3-padding-large w3-medium">
                                     <a href="#" style="background-color:rgb(255, 204, 0)"><i class=" w3-margin-right"></i></a>
                                     <div class="w3-container">
                                         <button onclick="document.getElementById('id06').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">CAC Keyboards</br>Gaming</br>Keyboards </button>
-
+											<!-- the Keyboards modal  -->
                                         <div id="id06" class="w3-modal">
                                             <div class="w3-modal-content">
                                                 <div class="w3-container w3-black">
@@ -214,7 +214,7 @@
                                                         <span onclick="document.getElementById('id06').style.display='none'" class="w3-button w3-display-topright w3-blue">&times;</span>
                                                         <h4><b>CAC Keyboards:</b></h4>
                                                         <img src="Images/dell.jpg" /><p>Dell CAC keyboards: Price: $30.00</p>
-							<img src="Images/CAC card.jpg"/><p>CAC Card: Price: $20.00</p>
+														<img src="Images/CAC card.jpg"/><p>CAC Card: Price: $20.00</p>
                                                         <h4><b>Gaming Keyboards:</b></h4>
                                                         <img src="Images/Cooler Master Devastator II.jpg" /><p>Cooler Master Devastator II: Price $30.99</p>
                                                         <img src="Images/Logitech diNovo Edge.jpg" /><p>Logitech diNovo Edge: Price $1050.99</p>
@@ -225,7 +225,7 @@
                                     </div>
                                     <div class="w3-container">
                                         <button onclick="document.getElementById('id07').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">Mouses</button>
-
+											<!-- the mouse modal  -->
                                         <div id="id07" class="w3-modal">
                                             <div class="w3-modal-content">
                                                 <div class="w3-container w3-black">
@@ -246,7 +246,7 @@
                                 </div>
                                 <div class="w3-container">
                                     <button onclick="document.getElementById('id08').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">Optical Drive</button>
-
+									<!-- the optical drive modal  -->
                                     <div id="id08" class="w3-modal">
                                         <div class="w3-modal-content">
                                             <div class="w3-container w3-black">
@@ -266,7 +266,7 @@
                                 </div>
                                 <div class="w3-container">
                                     <button onclick="document.getElementById('id09').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">Software</button>
-
+										<!-- the software modal  -->
                                     <div id="id09" class="w3-modal">
                                         <div class="w3-modal-content">
                                             <div class="w3-container w3-black">
@@ -286,7 +286,7 @@
                                 </div>
                                 <div class="w3-container">
                                     <button onclick="document.getElementById('id10').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">Video Card</button>
-
+										<!-- the video card modal  -->
                                     <div id="id10" class="w3-modal">
                                         <div class="w3-modal-content">
                                             <div class="w3-container w3-black">
@@ -306,7 +306,7 @@
                                 </div>
                                 <div class="w3-container">
                                     <button onclick="document.getElementById('id11').style.display='block'" class="w3-button" style="background-color:rgb(255, 204, 0)">Networking NIC</button>
-
+								<!-- the NIC Card modal  -->
                                     <div id="id11" class="w3-modal">
                                         <div class="w3-modal-content">
                                             <div class="w3-container w3-black">
@@ -483,9 +483,9 @@
 
     <!-- Newsletter Modal -->
     <div id="newsletter" class="w3-modal" style="position: fixed">
-        <div class="w3-modal-content w3-animate-zoom" style="padding:30px">
-            <div class="w3-container w3-white w3-center">
-                <i onclick="document.getElementById('newsletter').style.display='none'" class="fa fa-remove w3-right w3-button w3-transparent w3-xxlarge"></i>
+        <div class="w3-modal-content w3-animate w3-right" style="padding:20px">
+            <div class=" w3-white w3-center">
+                <i onclick="document.getElementById('newsletter').style.display='none'" class="fa fa-remove w3-right w3-button w3-transparent w3-xlarge"></i>
                 <h2 class="w3-wide">Need Help?</h2>
                 <p>Let use know if you need any help.</p>
                 <p><input class="w3-input w3-border" type="text" placeholder="Enter e-mail"></p>
